# ClaudeCodeTips

./: CLAUDE.md  README.md
.claude/: settings.local.json
.claude/skills/pptx/: SKILL.md  package.json  pyproject.toml
.claude/skills/pptx/scripts/: create-from-images.js  render-slides.js
.claude/skills/pptx/test/: test-workflow.js
.claude/skills/pptx/test/slides/: test-slide.html
.github/workflows/: test-pptx-skill.yml
Level-1-Core-CLI/: 01-Claude Code 基本用法.md  01-Claude Code安装与配置.md  01-Claude Code工作流实践.md  02-Cladue Code常用命令参考.md  02-Claude Code 基本用法.md  04-Claude Code工作流实践.md  README.md
Level-2-Configuration/: 01-CLAUDE.md使用指南.md  01-Claude Code使用其他大模型.md  Claude Code之Android编码规范.md  README.md
Level-3-Extension-Systems/: COMMANDS.md  Cladue Code进阶用法.md  Claude Agent Skill.md  Claude Code Skills总结.md  Deep Reading Analyst Skill使用指南.md  README.md  SKILLS.md
Level-3-Extension-Systems/skills/: Claude Code Skills个人总结.md  Claude Skills 案例.md
Level-4-Programmatic/: README.md
Level-5-Enterprise/: README.md
Level-6-Best-Practices/: 01-Claude Code 官方最佳实践.md  01-Claude Code 开源项目汇总.md  04-Claude Code个人使用总结.md  README.md
Level-6-Best-Practices/Claude Code 开源/: Claude Code 开源项目汇总.md
Level-6-Best-Practices/attachments/: requirements.md
instructions/: alibaba-android-development-standards.md
skills/docs/: README.md  docx.md  pdf.md  pptx.md  source-tracing.md  xlsx.md
